--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "path": "https://aistudiocdn.com/path@^0.12.7"
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "react-native": "https://aistudiocdn.com/react-native@^0.82.1"
   }
 }
 </script>
