--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "react-native": "https://aistudiocdn.com/react-native@^0.82.1"
+    "react-native": "https://aistudiocdn.com/react-native@^0.82.1",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0"
   }
 }
 </script>
