--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "react-native": "https://aistudiocdn.com/react-native@^0.82.1",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0"
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0",
+    "@capacitor/cli": "https://esm.sh/@capacitor/cli@^8.0.0"
   }
 }
 </script>
