feat: Integrate in-app review and update dependencies
Add the `@capacitor-community/in-app-review` package to enable in-app review functionality. Update existing dependencies for compatibility and potential bug fixes.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0",
     "@capacitor/cli": "https://esm.sh/@capacitor/cli@^8.0.0",
     "@capacitor/core": "https://esm.sh/@capacitor/core@^8.0.0",
-    "@revenuecat/purchases-capacitor": "https://esm.sh/@revenuecat/purchases-capacitor@^11.3.0"
+    "@revenuecat/purchases-capacitor": "https://esm.sh/@revenuecat/purchases-capacitor@^11.3.0",
+    "@capacitor-community/in-app-review": "https://esm.sh/@capacitor-community/in-app-review@^8.0.0"
   }
 }
 </script>
