fix: Update Android SDK and dependencies
Updates `compileSdk` and `targetSdkVersion` to 34, and pins `appcompat` dependency to 1.6.1 in the Codemagic build configuration. Also, renames a CSS color variable for clarity.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               'surface': '#F8FAFC', // Slate 50
               'surface-highlight': '#FFFFFF',
               'text-main': '#0F172A', // Slate 900
-              'text-sub': '#64748B', // Slate 500
+              'text-soft': '#64748B', // Slate 500
               'glass-surface': 'rgba(255, 255, 255, 0.7)',
               'glass-border': 'rgba(226, 232, 240, 0.6)',
               'alert-red': '#E11D48', // Rose 600
