feat: Configure Codemagic for Android builds
Integrates `google-services.json` and `variables.gradle` into the Codemagic build process for Android releases. This ensures proper configuration for Firebase services and dependency versions.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,17 +16,17 @@
               mono: ['JetBrains Mono', 'monospace'],
             },
             colors: {
-              primary: '#059669', // Emerald 600 - Darker for light mode contrast
+              primary: '#059669',
               'primary-light': '#34D399',
-              'neon-blue': '#0891B2', // Cyan 700
+              'neon-blue': '#0891B2',
               'deep-purple': '#7C3AED',
-              'surface': '#F8FAFC', // Slate 50
+              'surface': '#F8FAFC',
               'surface-highlight': '#FFFFFF',
-              'text-main': '#0F172A', // Slate 900
-              'text-soft': '#64748B', // Slate 500
+              'text-main': '#0F172A',
+              'text-soft': '#64748B',
               'glass-surface': 'rgba(255, 255, 255, 0.7)',
               'glass-border': 'rgba(226, 232, 240, 0.6)',
-              'alert-red': '#E11D48', // Rose 600
+              'alert-red': '#E11D48',
             },
             boxShadow: {
               'glass': '0 8px 32px 0 rgba(148, 163, 184, 0.15)',
@@ -77,7 +78,6 @@
         border: 1px solid rgba(255, 255, 255, 0.5);
       }
 
-      /* Premium scrolling */
       ::-webkit-scrollbar {
         width: 0px;
         background: transparent;
@@ -106,5 +106,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
