--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       tailwind.config = {
         theme: {
           extend: {
-            fontFamily: {
-              sans: ['Outfit', 'sans-serif'],
-              mono: ['JetBrains Mono', 'monospace'],
-            },
+            fontFamily: { sans: ['Outfit', 'sans-serif'], mono: ['JetBrains Mono', 'monospace'] },
             colors: {
               primary: '#059669',
               'primary-light': '#34D399',
@@ -24,64 +21,24 @@
               'surface-highlight': '#FFFFFF',
               'text-main': '#0F172A',
               'text-soft': '#64748B',
-              'glass-surface': 'rgba(255, 255, 255, 0.7)',
-              'glass-border': 'rgba(226, 232, 240, 0.6)',
-              'alert-red': '#E11D48',
             },
             boxShadow: {
               'glass': '0 8px 32px 0 rgba(148, 163, 184, 0.15)',
               'soft': '0 4px 20px -2px rgba(148, 163, 184, 0.1)',
-              'card': '0 10px 30px -5px rgba(148, 163, 184, 0.1)',
               'glow': '0 0 20px rgba(52, 211, 153, 0.3)',
             },
-            animation: {
-              'scan': 'scan 2.5s cubic-bezier(0.4, 0, 0.2, 1) infinite',
-              'float': 'float 6s ease-in-out infinite',
-              'shimmer': 'shimmer 2.5s linear infinite',
-            },
+            animation: { 'scan': 'scan 2.5s cubic-bezier(0.4, 0, 0.2, 1) infinite' },
             keyframes: {
-              scan: {
-                '0%': { top: '0%', opacity: '0' },
-                '10%': { opacity: '1' },
-                '90%': { opacity: '1' },
-                '100%': { top: '100%', opacity: '0' },
-              },
-              float: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-6px)' },
-              },
-              shimmer: {
-                '0%': { transform: 'translateX(-100%)' },
-                '100%': { transform: 'translateX(100%)' },
-              }
+              scan: { '0%': { top: '0%', opacity: '0' }, '10%': { opacity: '1' }, '90%': { opacity: '1' }, '100%': { top: '100%', opacity: '0' } }
             }
           }
         }
       }
     </script>
     <style>
-      body {
-        background-color: #F8FAFC;
-        color: #0F172A;
-        -webkit-tap-highlight-color: transparent;
-        background-image: 
-          radial-gradient(circle at 10% 10%, rgba(52, 211, 153, 0.05) 0%, transparent 40%),
-          radial-gradient(circle at 90% 90%, rgba(8, 145, 178, 0.05) 0%, transparent 40%);
-        background-attachment: fixed;
-        background-size: cover;
-      }
-      
-      .glass-panel {
-        background: rgba(255, 255, 255, 0.75);
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-      }
-
-      ::-webkit-scrollbar {
-        width: 0px;
-        background: transparent;
-      }
+      body { background-color: #F8FAFC; color: #0F172A; -webkit-tap-highlight-color: transparent; background-image: radial-gradient(circle at 10% 10%, rgba(52, 211, 153, 0.05) 0%, transparent 40%), radial-gradient(circle at 90% 90%, rgba(8, 145, 178, 0.05) 0%, transparent 40%); background-attachment: fixed; background-size: cover; }
+      .glass-panel { background: rgba(255, 255, 255, 0.75); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); border: 1px solid rgba(255, 255, 255, 0.5); }
+      ::-webkit-scrollbar { width: 0px; background: transparent; }
     </style>
   <script type="importmap">
 {
@@ -94,7 +51,6 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "react-native": "https://aistudiocdn.com/react-native@^0.82.1",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0",
     "@capacitor/cli": "https://esm.sh/@capacitor/cli@^6.0.0",
     "@capacitor/core": "https://esm.sh/@capacitor/core@^6.0.0",
