--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,51 +14,34 @@
             colors: {
               primary: '#059669',
               'primary-light': '#34D399',
-              'neon-blue': '#0891B2',
-              'deep-purple': '#7C3AED',
-              'surface': '#F8FAFC',
-              'surface-highlight': '#FFFFFF',
               'text-main': '#0F172A',
               'text-soft': '#64748B',
+              'surface': '#F8FAFC'
             },
             boxShadow: {
-              'glass': '0 8px 32px 0 rgba(148, 163, 184, 0.15)',
+              'card': '0 10px 40px -10px rgba(0,0,0,0.08)',
               'soft': '0 4px 20px -2px rgba(148, 163, 184, 0.1)',
-              'glow': '0 0 20px rgba(52, 211, 153, 0.3)',
             },
-            animation: { 'scan': 'scan 2.5s cubic-bezier(0.4, 0, 0.2, 1) infinite' },
+            animation: {
+              'scan': 'scan 2.5s cubic-bezier(0.4, 0, 0.2, 1) infinite'
+            },
             keyframes: {
-              scan: { '0%': { top: '0%', opacity: '0' }, '10%': { opacity: '1' }, '90%': { opacity: '1' }, '100%': { top: '100%', opacity: '0' } }
+              scan: {
+                '0%': { top: '0%', opacity: '0' },
+                '10%': { opacity: '1' },
+                '90%': { opacity: '1' },
+                '100%': { top: '100%', opacity: '0' }
+              }
             }
           }
         }
       }
     </script>
     <style>
-      body { background-color: #F8FAFC; color: #0F172A; -webkit-tap-highlight-color: transparent; background-image: radial-gradient(circle at 10% 10%, rgba(52, 211, 153, 0.05) 0%, transparent 40%), radial-gradient(circle at 90% 90%, rgba(8, 145, 178, 0.05) 0%, transparent 40%); background-attachment: fixed; background-size: cover; }
-      .glass-panel { background: rgba(255, 255, 255, 0.75); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); border: 1px solid rgba(255, 255, 255, 0.5); }
+      body { background-color: #F8FAFC; -webkit-tap-highlight-color: transparent; }
       ::-webkit-scrollbar { width: 0px; background: transparent; }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0",
-    "@capacitor/cli": "https://esm.sh/@capacitor/cli@^6.0.0",
-    "@capacitor/core": "https://esm.sh/@capacitor/core@^6.0.0",
-    "@revenuecat/purchases-capacitor": "https://esm.sh/@revenuecat/purchases-capacitor@^11.3.0",
-    "@capacitor-community/in-app-review": "https://esm.sh/@capacitor-community/in-app-review@^8.0.0"
-  }
-}
-</script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
